# command-center

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  profiles.rs
src/components/: CloseSessionModal.tsx  DangerousCommandModal.tsx  FreeLayout.tsx  HelpPanel.tsx  LayoutBar.tsx  NewSessionModal.tsx  OverviewPanel.tsx  SessionSettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  StatusDot.tsx  TerminalGrid.tsx  TerminalPanel.tsx  TitleBar.tsx
src/hooks/: useSession.ts  useTerminal.ts  useTick.ts
src/store/: profiles.ts  sessions.ts
src/styles/: globals.css
src/types/: index.ts
